# SemantiCache

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: SemantiCacheDocs.md
semanticache/: __init__.py  cache.py
semanticache/utils/: config.py  logger.py  run_tests.py
tests/: test_engine.py  test_get_set.py  test_load.py
