[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SemantiCache"
dynamic = ["version", "dependencies"]

description = "Semantic caching library for LLM apps"
authors = [{ name = "Abraham Audu" , email = "abraham.audu.96@gmail.com" }]
license = { text = "GNU General Public License v3" }
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
keywords = [
    "llm",
    "faiss",
    "semantic",
    "cache",
    "langchain",
    "langchain-community",
    "chatbot"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/theabrahamaudu/SemantiCache.git"
Documentation = "https://github.com/theabrahamaudu/SemantiCache/blob/main/docs/SemantiCacheDocs.md"
Issues = "https://github.com/theabrahamaudu/SemantiCache/issues"

[tool.setuptools]
packages = ["semanticache"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "semanticache.__version__"}
dependencies = {file = "requirements.txt"}